# api/docs/swagger.json
@@ -19,6 +19,13 @@
                 "summary": "新增图书",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authentication Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "create book request",
                         "name": "request",
                         "in": "body",
@@ -26,13 +33,6 @@
                         "schema": {
                             "$ref": "#/definitions/contract.CreateBookRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -66,17 +66,17 @@
                 "summary": "删除图书",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "delete book id",
-                        "name": "book_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Authentication Token",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "delete book id",
+                        "name": "book_id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -225,6 +225,13 @@
                 "summary": "更改图书信息",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authentication Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "update book request",
                         "name": "request",
                         "in": "body",
@@ -232,13 +239,6 @@
                         "schema": {
                             "$ref": "#/definitions/contract.UpdateBookRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -349,8 +349,8 @@
                 }
             }
         },
-        "/book/borrow/{book_id}": {
-            "get": {
+        "/book/borrow": {
+            "post": {
                 "description": "借阅图书",
                 "consumes": [
                     "application/json"
@@ -364,18 +364,20 @@
                 "summary": "借阅图书",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "borrow book id",
-                        "name": "book_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Authentication Token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "borrow book request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.BorrowBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -569,8 +571,8 @@
                 }
             }
         },
-        "/book/return/{book_id}": {
-            "get": {
+        "/book/return": {
+            "post": {
                 "description": "归还图书",
                 "consumes": [
                     "application/json"
@@ -584,18 +586,20 @@
                 "summary": "归还图书",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "return book id",
-                        "name": "book_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Authentication Token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "return book request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contract.ReturnBookRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -760,6 +764,13 @@
                 "summary": "登录",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authentication Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "login request",
                         "name": "request",
                         "in": "body",
@@ -767,13 +778,6 @@
                         "schema": {
                             "$ref": "#/definitions/contract.LoginRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -807,6 +811,13 @@
                 "summary": "注册",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authentication Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "register request",
                         "name": "request",
                         "in": "body",
@@ -814,13 +825,6 @@
                         "schema": {
                             "$ref": "#/definitions/contract.RegisterRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authentication Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -852,6 +856,17 @@
                 }
             }
         },
+        "contract.BorrowBookRequest": {
+            "type": "object",
+            "required": [
+                "book_id"
+            ],
+            "properties": {
+                "book_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "contract.BorrowBookResponse": {
             "type": "object",
             "properties": {
@@ -861,7 +876,12 @@
             }
         },
         "contract.CreateBookRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/entity.Book"
+                }
+            }
         },
         "contract.CreateBookResponse": {
             "type": "object",
@@ -903,6 +923,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -911,6 +937,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -919,6 +951,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -956,6 +994,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -979,6 +1023,15 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Book"
+                    }
+                },
+                "total_page": {
+                    "type": "integer"
                 }
             }
         },
@@ -987,6 +1040,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -995,6 +1054,12 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Record"
+                    }
                 }
             }
         },
@@ -1042,6 +1107,9 @@
                 }
             }
         },
+        "contract.ReturnBookRequest": {
+            "type": "object"
+        },
         "contract.ReturnBookResponse": {
             "type": "object",
             "properties": {
@@ -1062,7 +1130,12 @@
             }
         },
         "contract.UpdateBookRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/entity.Book"
+                }
+            }
         },
         "contract.UpdateBookResponse": {
             "type": "object",
@@ -1088,6 +1161,55 @@
             "properties": {
                 "base_response": {
                     "$ref": "#/definitions/contract.BaseResponse"
+                }
+            }
+        },
+        "entity.Book": {
+            "type": "object",
+            "required": [
+                "author",
+                "book_name",
+                "isbn",
+                "publisher"
+            ],
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "book_id": {
+                    "type": "integer"
+                },
+                "book_name": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "img_url": {
+                    "type": "string"
+                },
+                "isbn": {
+                    "type": "string"
+                },
+                "publisher": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Record": {
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/entity.Book"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "userId": {
+                    "type": "integer"
                 }
             }
         },
